menambahkan section design

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                         <a class="nav-link page-scroll" href="#project">Project</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link page-scroll" href="#design">Design</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -205,12 +208,12 @@
                     <div class="card">
                         <img src="assets/img/project/xylarium.PNG" class="mx-auto mt-3" />
                         <br />
-                        <div class="card-body">
+                        <div class="card-body mb-5">
                             <p class="card-text">
                                 Sistem Informasi Pengolahan Data Kayu Xylarium Bogoriense <br>
-                                <a href="https://youtu.be/u62tqL2dRaI" class="btn btn-sm btn-primary mt-3">
+                                <!-- <a href="https://youtu.be/u62tqL2dRaI" class="btn btn-sm btn-primary mt-3">
                                     <i class="fas fa-play"></i> Demo
-                                </a>
+                                </a> -->
                             </p>
                         </div>
                     </div>
@@ -291,6 +294,91 @@
                             </p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="design">
+        <div class="container">
+            <h3 class="mb-3 text-center" data-aos="fade-up" data-aos-duration="1000">Apps Design</h3>
+            <div class="garis mx-auto mb-5" data-aos="fade-up" data-aos-duration="1000"></div>
+
+            <h6 class="text-white mb-3" data-aos="fade-up" data-aos-duration="1000">Web Design</h6>
+            <div class="row text-center skill justify-content-center mb-5">
+                <div class="col-md-4 mb-5" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="card">
+                        <img src="assets/img/design/web/Pigur.png" class="mx-auto mt-3" />
+                        <br />
+                        <div class="card-body">
+                            <p class="card-text">
+                                Pigur (Pilih Guru)
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-5" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="card">
+                        <img src="assets/img/design/web/SIGDS.png" class="mx-auto mt-3" />
+                        <br />
+                        <div class="card-body">
+                            <p class="card-text">
+                                Sistem Informasi Gerakan Disiplin Sekolah
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-5" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="card">
+                        <img src="assets/img/design/web/Dashboar.png" class="mx-auto mt-3" />
+                        <div class="card-body">
+                            <p class="card-text">
+                                Dashboard Admin
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <h6 class="text-white mb-3" data-aos="fade-up" data-aos-duration="1000">Mobile Design</h6>
+            <div class="row text-center skill justify-content-center mb-3">
+                <div class="col-md-4 mb-5" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="card">
+                        <img src="assets/img/design/mobile/Pigur.png" class="mx-auto mt-3" />
+                        <br />
+                        <div class="card-body">
+                            <p class="card-text">
+                                Pigur Mobile App
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-5" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="card">
+                        <img src="assets/img/design/mobile/Medianime.png" class="mx-auto mt-3 anime" />
+                        <br />
+                        <div class="card-body">
+                            <p class="card-text">
+                                Medianime Mobile App
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-5" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="card">
+                        <img src="assets/img/design/mobile/Travel App.png" class="mx-auto mt-3" />
+                        <div class="card-body">
+                            <p class="card-text">
+                                Travel Mobile App
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-2">
+                    <a href="https://www.instagram.com/arpra.creative/" class="btn btn-primary" data-aos="fade-up"
+                        data-aos-duration="1000">More Design</a>
                 </div>
             </div>
         </div>
