--- a/index.html
+++ b/index.html
@@ -204,20 +204,20 @@
             <h3 class="mb-3 text-center" data-aos="fade-up" data-aos-duration="1000">Project</h3>
             <div class="garis mx-auto mb-5" data-aos="fade-up" data-aos-duration="1000"></div>
             <div class="row text-center skill justify-content-center">
-                <div class="col-md-6 mb-5" data-aos="fade-up" data-aos-duration="1000">
+                <!-- <div class="col-md-6 mb-5" data-aos="fade-up" data-aos-duration="1000">
                     <div class="card">
                         <img src="assets/img/project/xylarium.PNG" class="mx-auto mt-3" />
                         <br />
                         <div class="card-body mb-5">
                             <p class="card-text">
                                 Sistem Informasi Pengolahan Data Kayu Xylarium Bogoriense <br>
-                                <!-- <a href="https://youtu.be/u62tqL2dRaI" class="btn btn-sm btn-primary mt-3">
+                                <a href="https://youtu.be/u62tqL2dRaI" class="btn btn-sm btn-primary mt-3">
                                     <i class="fas fa-play"></i> Demo
-                                </a> -->
+                                </a>
                             </p>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-md-6 mb-5" data-aos="fade-up" data-aos-duration="1000">
                     <div class="card">
                         <img src="assets/img/project/my-article.png" class="mx-auto mt-3" />
