--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <h3 class="mb-3 text-center" data-aos="fade-up" data-aos-duration="1000">Project</h3>
             <div class="garis mx-auto mb-5" data-aos="fade-up" data-aos-duration="1000"></div>
             <div class="row text-center skill justify-content-center">
-                <!-- <div class="col-md-6 mb-5" data-aos="fade-up" data-aos-duration="1000">
+                <div class="col-md-6 mb-5" data-aos="fade-up" data-aos-duration="1000">
                     <div class="card">
                         <img src="assets/img/project/xylarium.PNG" class="mx-auto mt-3" />
                         <br />
@@ -217,7 +217,7 @@
                             </p>
                         </div>
                     </div>
-                </div> -->
+                </div>
                 <div class="col-md-6 mb-5" data-aos="fade-up" data-aos-duration="1000">
                     <div class="card">
                         <img src="assets/img/project/my-article.png" class="mx-auto mt-3" />
