--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <div class="card">
                         <img src="assets/img/project/xylarium.PNG" class="mx-auto mt-3" />
                         <br />
-                        <div class="card-body mb-5">
+                        <div class="card-body">
                             <p class="card-text">
                                 Sistem Informasi Pengolahan Data Kayu Xylarium Bogoriense <br>
                                 <a href="https://youtu.be/u62tqL2dRaI" class="btn btn-sm btn-primary mt-3">
