add: portfolio item, link demo

--- a/index.html
+++ b/index.html
@@ -647,6 +647,46 @@
                 </div>
               </div>
               <!-- END: Skill Item -->
+              <!-- START: Skill Item -->
+              <div class="skill-item padd-15">
+                <div class="skill-item-inner">
+                  <div class="icon">
+                    <?xml version="1.0" encoding="utf-8"?><svg
+                      version="1.1"
+                      id="Layer_1"
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      x="0px"
+                      y="0px"
+                      viewBox="0 0 122.88 106.42"
+                      style="enable-background: new 0 0 122.88 106.42"
+                      xml:space="preserve"
+                    >
+                      <style type="text/css">
+                        .st0 {
+                          fill: #4dba87;
+                        }
+                        .st1 {
+                          fill: #425466;
+                        }
+                      </style>
+                      <g>
+                        <polygon
+                          class="st0"
+                          points="75.63,0 61.44,24.58 47.25,0 0,0 61.44,106.42 122.88,0 75.63,0"
+                        />
+                        <polygon
+                          class="st1"
+                          points="75.63,0 61.44,24.58 47.25,0 24.58,0 61.44,63.85 98.3,0 75.63,0"
+                        />
+                      </g>
+                    </svg>
+                  </div>
+                  <h4>Vue JS</h4>
+                  <p>Beginner</p>
+                </div>
+              </div>
+              <!-- END: Skill Item -->
             </div>
           </div>
         </section>
@@ -690,6 +730,28 @@
                       Sistem Informasi Pengolahan Data Kayu Xylarium Bogoriense
                     </h4>
                     <div class="icon"><i class="fa fa-search"></i></div>
+                  </div>
+                </div>
+              </div>
+              <!-- END: Portfolio Item -->
+              <!-- START: Portfolio Item -->
+              <div class="portfolio-item padd-15" data-category="project">
+                <div class="portfolio-item-inner shadow-dark">
+                  <div class="portfolio-img">
+                    <img
+                      src="images/portfolio/portfolio/Digital Quran.png"
+                      alt="Digital Quran"
+                    />
+                  </div>
+                  <div class="portfolio-info">
+                    <h4>Digital Qur'an</h4>
+                    <div class="icon">
+                      <a
+                        href="https://quran-app-arpra.netlify.app/"
+                        target="_blank"
+                        ><i class="fa fa-eye"></i
+                      ></a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -769,7 +831,13 @@
                   </div>
                   <div class="portfolio-info">
                     <h4>Pantau Corona</h4>
-                    <div class="icon"><i class="fa fa-search"></i></div>
+                    <div class="icon">
+                      <a
+                        href="https://pantau-corona.000webhostapp.com/"
+                        target="_blank"
+                        ><i class="fa fa-eye"></i
+                      ></a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -785,7 +853,13 @@
                   </div>
                   <div class="portfolio-info">
                     <h4>LuxSpace</h4>
-                    <div class="icon"><i class="fa fa-search"></i></div>
+                    <div class="icon">
+                      <a
+                        href="https://luxspace-arpra.netlify.app/"
+                        target="_blank"
+                        ><i class="fa fa-eye"></i
+                      ></a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -796,12 +870,18 @@
                   <div class="portfolio-img">
                     <img
                       src="images/portfolio/Web Design/Web Portfolio 1.png"
-                      alt="LuxSpace"
+                      alt="Web Portfolio 1"
                     />
                   </div>
                   <div class="portfolio-info">
                     <h4>Web Portfolio v1</h4>
-                    <div class="icon"><i class="fa fa-search"></i></div>
+                    <div class="icon">
+                      <a
+                        href="https://alditegarprakoso.github.io/portofolio-v1/"
+                        target="_blank"
+                        ><i class="fa fa-eye"></i
+                      ></a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -812,7 +892,7 @@
                   <div class="portfolio-img">
                     <img
                       src="images/portfolio/Web Design/Hero Section with SASS.png"
-                      alt="LuxSpace"
+                      alt="Hero Section with SASS"
                     />
                   </div>
                   <div class="portfolio-info">
