--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                   <li class="services__modal-item">
                     <i class="bx bx-check services__modal-icon"></i>
                     <p class="services__modal-info">
-                      <strong class="text-white"
+                      <strong class="text-experience"
                         >Universitas Bina Sarana Informatika (UBSI)</strong
                       >
                       - Sistem Informasi (Diploma 3)
@@ -220,15 +220,19 @@
                   <li class="services__modal-item">
                     <i class="bx bx-check services__modal-icon"></i>
                     <p class="services__modal-info">
-                      <strong class="text-white">SMK Negeri 1 Ciomas</strong> -
-                      Rekayasa Perangkat Lunak
+                      <strong class="text-experience"
+                        >SMK Negeri 1 Ciomas</strong
+                      >
+                      - Rekayasa Perangkat Lunak
                     </p>
                   </li>
 
                   <li class="services__modal-item">
                     <i class="bx bx-check services__modal-icon"></i>
                     <p class="services__modal-info">
-                      <strong class="text-white">SMP Negeri 1 Ciomas</strong>
+                      <strong class="text-experience"
+                        >SMP Negeri 1 Ciomas</strong
+                      >
                     </p>
                   </li>
                 </ul>
@@ -242,7 +246,7 @@
                   <li class="services__modal-item">
                     <i class="bx bx-check services__modal-icon"></i>
                     <p class="services__modal-info">
-                      <strong class="text-white"
+                      <strong class="text-experience"
                         >Bootcamp Fullstack Developer</strong
                       >
                       - Dumbways ID (PT. Teknologi DumbWays Indonesia)
@@ -259,7 +263,7 @@
                   <li class="services__modal-item">
                     <i class="bx bx-check services__modal-icon"></i>
                     <p class="services__modal-info">
-                      <strong class="text-white"
+                      <strong class="text-experience"
                         >Digital Talent Scholarship</strong
                       >
                       - Intro to Fullstack
@@ -269,7 +273,7 @@
                   <li class="services__modal-item">
                     <i class="bx bx-check services__modal-icon"></i>
                     <p class="services__modal-info">
-                      <strong class="text-white">Dicoding</strong> - Dasar
+                      <strong class="text-experience">Dicoding</strong> - Dasar
                       Pemrograman Web
                     </p>
                   </li>
@@ -277,8 +281,8 @@
                   <li class="services__modal-item">
                     <i class="bx bx-check services__modal-icon"></i>
                     <p class="services__modal-info">
-                      <strong class="text-white">Build With Angga</strong> -
-                      Fullstack Web Designer
+                      <strong class="text-experience">Build With Angga</strong>
+                      - Fullstack Web Designer
                     </p>
                   </li>
                 </ul>
@@ -306,15 +310,17 @@
                   <li class="services__modal-item">
                     <i class="bx bx-check services__modal-icon"></i>
                     <p class="services__modal-info">
-                      <strong class="text-white">Fullstack Developer</strong> -
-                      PT. Tenaga Kanggo Indonesia (September 2022 - Now)
+                      <strong class="text-experience"
+                        >Fullstack Developer</strong
+                      >
+                      - PT. Tenaga Kanggo Indonesia (September 2022 - Now)
                     </p>
                   </li>
 
                   <li class="services__modal-item">
                     <i class="bx bx-check services__modal-icon"></i>
                     <p class="services__modal-info">
-                      <strong class="text-white"
+                      <strong class="text-experience"
                         >Junior Front-End Developer</strong
                       >
                       - PT. Mejik Utama Sugiharta (Juni - Agustus 2022)
@@ -324,16 +330,16 @@
                   <li class="services__modal-item">
                     <i class="bx bx-check services__modal-icon"></i>
                     <p class="services__modal-info">
-                      <strong class="text-white">Staff IT</strong> - Direktorat
-                      Pemolaan dan Informasi Konservasi Alam (September -
-                      Desember 2021)
+                      <strong class="text-experience">Staff IT</strong> -
+                      Direktorat Pemolaan dan Informasi Konservasi Alam
+                      (September - Desember 2021)
                     </p>
                   </li>
 
                   <li class="services__modal-item">
                     <i class="bx bx-check services__modal-icon"></i>
                     <p class="services__modal-info">
-                      <strong class="text-white"
+                      <strong class="text-experience"
                         >Web Programmer (Intern)</strong
                       >
                       - Pusat Penelitian dan Pengembangan Hasil Hutan Bogor -
