fix: quran app porto

--- a/index.html
+++ b/index.html
@@ -975,13 +975,13 @@
 
           <div class="work__card mix mobile">
             <img
-              src="assets/img/portfolio/Mobile/Todo Apps.png"
+              src="assets/img/portfolio/Mobile/Quran Apps.png"
               alt="portfolio"
               class="work__img"
-              onclick="openModal(this.src, 'Todo Apps')"
+              onclick="openModal(this.src, 'Quran Apps')"
             />
 
-            <h3 class="work__title">Todo Apps</h3>
+            <h3 class="work__title">Quran Apps</h3>
 
             <div>
               <i class="bx bxl-react"></i>
