feat: update my life

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
           <div class="home__buttons">
             <a
-              href="https://drive.google.com/file/d/1I8XKck-qVbgshS16V_vyomGoyT957NtK/view?usp=drive_link"
+              href="https://drive.google.com/file/d/1vUkjc5UYMRbGv3suN3fUAGEEZPI8DWgR/view?usp=sharing"
               target="_blank"
               class="button button--ghost"
             >
@@ -184,8 +184,9 @@
               </div>
             </div>
             <p class="about__description">
-              I have an IT background, graduated from Diploma 3 of System Information. I have
-              2 years work experience as a Fullstack and Frontend Developer.
+              I have an IT background, graduated from Diploma 3 of System
+              Information. I have 2 years work experience as a Fullstack and
+              Frontend Developer.
             </p>
             <p class="about__description">
               In 2022 joined a bootcamp Fullstack Javasctipt in PT. Dumbways
@@ -195,7 +196,8 @@
               collaboration and team management.
             </p>
             <p class="about__description">
-              Currently, I have an interest and am pursuing my professional career in Frontend Developer.
+              Currently, I have an interest and am pursuing my professional
+              career in Frontend Developer.
             </p>
 
             <a href="#contact" class="button">Contact Me</a>
@@ -328,10 +330,30 @@
                   <li class="services__modal-item">
                     <i class="bx bx-check services__modal-icon"></i>
                     <p class="services__modal-info">
+                      <strong class="text-experience">Web Developer</strong>
+                      - PT. Gema Mulia Semesta - SOUVIA (October 2024 - Now)
+                    </p>
+                  </li>
+
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__modal-icon"></i>
+                    <p class="services__modal-info">
+                      <strong class="text-experience"
+                        >Frontend Developer</strong
+                      >
+                      - PT. Tenaga Kanggo Indonesia (February 2023 - October
+                      2024)
+                    </p>
+                  </li>
+
+                  <li class="services__modal-item">
+                    <i class="bx bx-check services__modal-icon"></i>
+                    <p class="services__modal-info">
                       <strong class="text-experience"
                         >Fullstack Developer</strong
                       >
-                      - PT. Tenaga Kanggo Indonesia (September 2022 - Now)
+                      - PT. Tenaga Kanggo Indonesia (September 2022 - February
+                      2023)
                     </p>
                   </li>
 
@@ -465,6 +487,15 @@
                     <span class="skills__level">Intermediate</span>
                   </div>
                 </div>
+
+                <div class="skills__data">
+                  <i class="bx bxs-badge-check"></i>
+
+                  <div>
+                    <h3 class="skills__name">Figma</h3>
+                    <span class="skills__level">Novice</span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -507,6 +538,14 @@
                   <div>
                     <h3 class="skills__name">Sequelize</h3>
                     <span class="skills__level">Novice</span>
+                  </div>
+                </div>
+                <div class="skills__data">
+                  <i class="bx bxs-badge-check"></i>
+
+                  <div>
+                    <h3 class="skills__name">WordPress</h3>
+                    <span class="skills__level">Intermediate</span>
                   </div>
                 </div>
               </div>
@@ -646,14 +685,14 @@
         <h2 class="section__title">My Portfolio</h2>
 
         <div class="work__filters">
-          <!-- <span class="work__item active-work" data-filter="all">All</span> -->
-          <span class="work__item active-work" data-filter=".web">Web</span>
+          <span class="work__item active-work" data-filter=".all-porto">All</span>
+          <span class="work__item" data-filter=".web">Web</span>
           <span class="work__item" data-filter=".mobile">Mobile</span>
           <span class="work__item" data-filter=".design">Design</span>
         </div>
 
         <div class="work__container container grid">
-          <div class="work__card mix web">
+          <div class="work__card mix all-porto web">
             <img
               src="assets/img/portfolio/Web/Digital Quran.png"
               alt="portfolio"
@@ -676,7 +715,7 @@
             </a>
           </div>
 
-          <div class="work__card mix web">
+          <div class="work__card mix all-porto web">
             <img
               src="assets/img/portfolio/Web/LuxSpace.png"
               alt="portfolio"
@@ -690,12 +729,16 @@
               <i class="bx bxl-tailwind-css"></i>
             </div>
 
-            <a href="https://luxspace-arpra.netlify.app/" class="work__button">
+            <a
+              href="https://luxspace-arpra.netlify.app/"
+              target="_blank"
+              class="work__button"
+            >
               Demo <i class="bx bx-right-arrow-alt work__icon"></i>
             </a>
           </div>
 
-          <div class="work__card mix web">
+          <div class="work__card mix all-porto web">
             <img
               src="assets/img/portfolio/Web/Dumbmerch.png"
               alt="portfolio"
@@ -710,12 +753,16 @@
               <i class="bx bxl-nodejs"></i>
             </div>
 
-            <a href="https://dumbmerch-aldi.netlify.app/" class="work__button">
+            <a
+              href="https://dumbmerch-aldi.netlify.app/"
+              target="_blank"
+              class="work__button"
+            >
               Demo <i class="bx bx-right-arrow-alt work__icon"></i>
             </a>
           </div>
 
-          <div class="work__card mix web">
+          <div class="work__card mix all-porto web">
             <img
               src="assets/img/portfolio/Web/Dumbsound.png"
               alt="portfolio"
@@ -730,7 +777,30 @@
             </div>
           </div>
 
-          <div class="work__card mix web">
+          <div class="work__card mix all-porto web">
+            <img
+              src="assets/img/portfolio/Web/Samsung Clone.png"
+              alt="portfolio"
+              class="work__img"
+              onclick="openModal(this.src, 'Samsung Clone')"
+            />
+
+            <h3 class="work__title">Samsung Clone</h3>
+            <div>
+              <i class="bx bxl-react"></i>
+              <i class="bx bxl-tailwind-css"></i>
+            </div>
+
+            <a
+              href="https://samsungclone.vercel.app/"
+              target="_blank"
+              class="work__button"
+            >
+              Demo <i class="bx bx-right-arrow-alt work__icon"></i>
+            </a>
+          </div>
+
+          <div class="work__card mix all-porto web">
             <img
               src="assets/img/portfolio/Web/My Artcile.png"
               alt="portfolio"
@@ -753,7 +823,7 @@
             </a>
           </div>
 
-          <div class="work__card mix web">
+          <div class="work__card mix all-porto web">
             <img
               src="assets/img/portfolio/Web/Donasi Kita.png"
               alt="portfolio"
@@ -776,7 +846,7 @@
             </a>
           </div>
 
-          <div class="work__card mix web">
+          <div class="work__card mix all-porto web">
             <img
               src="assets/img/portfolio/Web/Sistem Informasi E-Vote.png"
               alt="portfolio"
@@ -793,12 +863,13 @@
             <a
               href="https://www.youtube.com/watch?v=a1hWeoyvr9k"
               class="work__button"
+              target="_blank"
             >
               Demo Video <i class="bx bx-right-arrow-alt work__icon"></i>
             </a>
           </div>
 
-          <div class="work__card mix web">
+          <div class="work__card mix all-porto web">
             <img
               src="assets/img/portfolio/Web/Hero Section with SASS.png"
               alt="portfolio"
@@ -813,7 +884,7 @@
             </div>
           </div>
 
-          <div class="work__card mix web">
+          <div class="work__card mix all-porto web">
             <img
               src="assets/img/portfolio/Web/Movie List.png"
               alt="portfolio"
@@ -830,7 +901,7 @@
             </div>
           </div>
 
-          <div class="work__card mix web">
+          <div class="work__card mix all-porto web">
             <img
               src="assets/img/portfolio/Web/Pantau Corona.png"
               alt="portfolio"
@@ -845,7 +916,7 @@
             </div>
           </div>
 
-          <div class="work__card mix web">
+          <div class="work__card mix all-porto web">
             <img
               src="assets/img/portfolio/Web/Sistem Informasi Gerakan Disiplin Sekolah.png"
               alt="portfolio"
@@ -860,7 +931,7 @@
             </div>
           </div>
 
-          <div class="work__card mix web">
+          <div class="work__card mix all-porto web">
             <img
               src="assets/img/portfolio/Web/Sistem Informasi Pengolahan Data Kayu Xylarium Bogoriense.png"
               alt="portfolio"
@@ -875,7 +946,7 @@
             </div>
           </div>
 
-          <div class="work__card mix web">
+          <div class="work__card mix all-porto web">
             <img
               src="assets/img/portfolio/Web/Web Portfolio 1.png"
               alt="portfolio"
@@ -892,7 +963,7 @@
             </div>
           </div>
 
-          <div class="work__card mix web">
+          <div class="work__card mix all-porto web">
             <img
               src="assets/img/portfolio/Web/Web Portfolio 2.png"
               alt="portfolio"
@@ -909,7 +980,7 @@
             </div>
           </div>
 
-          <div class="work__card mix web">
+          <div class="work__card mix all-porto web">
             <img
               src="assets/img/portfolio/Web/Web Portfolio 3.png"
               alt="portfolio"
@@ -926,7 +997,7 @@
             </div>
           </div>
 
-          <div class="work__card mix web">
+          <div class="work__card mix all-porto web">
             <img
               src="assets/img/portfolio/Web/Web Portfolio 4.png"
               alt="portfolio"
@@ -943,7 +1014,7 @@
             </div>
           </div>
 
-          <div class="work__card mix mobile">
+          <div class="work__card mix all-porto mobile">
             <img
               src="assets/img/portfolio/Mobile/Calculator Apps.png"
               alt="portfolio"
@@ -958,7 +1029,7 @@
             </div>
           </div>
 
-          <div class="work__card mix mobile">
+          <div class="work__card mix all-porto mobile">
             <img
               src="assets/img/portfolio/Mobile/Todo Apps.png"
               alt="portfolio"
@@ -973,7 +1044,7 @@
             </div>
           </div>
 
-          <div class="work__card mix mobile">
+          <div class="work__card mix all-porto mobile">
             <img
               src="assets/img/portfolio/Mobile/Quran Apps.png"
               alt="portfolio"
@@ -1004,7 +1075,7 @@
             </a>
           </div>
 
-          <div class="work__card mix design">
+          <div class="work__card mix all-porto design">
             <img
               src="assets/img/portfolio/Design/Alarm App.png"
               alt="portfolio"
@@ -1019,7 +1090,7 @@
             </div>
           </div>
 
-          <div class="work__card mix design">
+          <div class="work__card mix all-porto design">
             <img
               src="assets/img/portfolio/Design/ATP Tech.png"
               alt="portfolio"
@@ -1034,7 +1105,7 @@
             </div>
           </div>
 
-          <div class="work__card mix design">
+          <div class="work__card mix all-porto design">
             <img
               src="assets/img/portfolio/Design/Dashboard UI.png"
               alt="portfolio"
@@ -1049,7 +1120,7 @@
             </div>
           </div>
 
-          <div class="work__card mix design">
+          <div class="work__card mix all-porto design">
             <img
               src="assets/img/portfolio/Design/Hijra App.png"
               alt="portfolio"
@@ -1064,7 +1135,7 @@
             </div>
           </div>
 
-          <div class="work__card mix design">
+          <div class="work__card mix all-porto design">
             <img
               src="assets/img/portfolio/Design/Medianime.png"
               alt="portfolio"
@@ -1079,7 +1150,7 @@
             </div>
           </div>
 
-          <div class="work__card mix design">
+          <div class="work__card mix all-porto design">
             <img
               src="assets/img/portfolio/Design/Pigur Mobile App.png"
               alt="portfolio"
@@ -1094,7 +1165,7 @@
             </div>
           </div>
 
-          <div class="work__card mix design">
+          <div class="work__card mix all-porto design">
             <img
               src="assets/img/portfolio/Design/Pigur Web Design.png"
               alt="portfolio"
@@ -1109,7 +1180,7 @@
             </div>
           </div>
 
-          <div class="work__card mix design">
+          <div class="work__card mix all-porto design">
             <img
               src="assets/img/portfolio/Design/SIGDS Design.png"
               alt="portfolio"
@@ -1124,7 +1195,7 @@
             </div>
           </div>
 
-          <div class="work__card mix design">
+          <div class="work__card mix all-porto design">
             <img
               src="assets/img/portfolio/Design/Travel App.png"
               alt="portfolio"
@@ -1139,7 +1210,7 @@
             </div>
           </div>
 
-          <div class="work__card mix design">
+          <div class="work__card mix all-porto design">
             <img
               src="assets/img/portfolio/Design/Waspada Corona.png"
               alt="portfolio"
