--- a/index.html
+++ b/index.html
@@ -685,9 +685,7 @@
         <h2 class="section__title">My Portfolio</h2>
 
         <div class="work__filters">
-          <span class="work__item active-work" data-filter=".all-porto"
-            >All</span
-          >
+          <span class="work__item active-work" data-filter=".all-porto">All</span>
           <span class="work__item" data-filter=".web">Web</span>
           <span class="work__item" data-filter=".mobile">Mobile</span>
           <span class="work__item" data-filter=".design">Design</span>
